<resources>
    <string name="toast_crash"></string>
    <string name="home_welcome"><u>"Welcome to Waterworks!"</u></string>
    <string name="app_name">Waterworks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_fields">Blank fields should not allow.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="existsEmail">Email address already used.</string>
    <string name="invalidPhone">Invalid phone number</string>
    <string name="levelCal">Please use the Level Calculator to determine the student\'s level.</string>
    <string name="selectLessonType">Please select lesson type.</string>
    <string name="not_match_email">Email does not match the confirm email</string>
    <string name="not_match_pass">Password does not match the confirm password</string>
    <string name="hint_email">E-mail Address</string>
    <string name="hint_confirm_email">Confirm E-mail Address</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_birthdate">Date of Birth</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_street_address">Street Address</string>
    <string name="hint_apt">Apt#</string>
    <string name="hint_state">State</string>
    <string name="hint_best_call">Best Call Back Time</string>
    <string name="hint_zipcode">Zip Code</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_detailed_message">Detailed Message</string>
    <string name="hint_city">City</string>
    <string name="hint_prm_tel">Primary Telephone</string>
    <string name="hint_select_site">Select Site</string>
    <string name="hint_meet_date">Select Meet Date</string>
    <string name="hint_select_lessontype">Select Lesson Type</string>
    <string name="hint_no_of_volunteer">Select No.of Volunteers</string>
    <string name="hint_select_dept">Select Department</string>
    <string name="hint_alt_tel">Alternate Number</string>
    <string name="hint_select_gender">Select Gender</string>
    <string name="hint_card_type">Card Type</string>
    <string name="hint_account_type">Account Type</string>
    <string name="hint_select_level">Select Level</string>
    <string name="hint_nature_type">Select Nature Type</string>
    <string name="hint_sendry_tel">Secondary Telephone</string>
    <string name="selectSite">Select Site</string>
    <string name="pleasewait">Please wait&#8230;</string>
    <string name="hint_employee">Name of Employee</string>
    <string name="fgtpwdtitle">Please enter your email address and we will send you instructions on how to reset your password.</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="emailpref_title">We send out alerts and messages based on your past and upcoming schedule.\nHere is a list of alerts available for your account</string>
    <string name="registerachild">Register a Child</string>
    <string name="levelText">Please use our Level Calculator to determine the correct level of the participant.</string>
    <string name="instructinfo">I am aware that if my scheduled instructor is out sick, I will be provided with a substitute instructor. I have the right to decline the substitute and receive a Make-Up class.</string>
    <string name="medicalinfo">Does your child have any allergies/medical conditions that would be affected by exercise or swimming?</string>
    <string name="additionalinfo">To better assist us in choosing an appropriate instructor match for your child, <font color="@color/textbox_color"><b><u>please click here.</u></b></font></string>
    <string name="hideinfo">Hide Optional Questions</string>
    <string name="txtinfo">We would like to create the best experience possible. These questions will help us match your child with the best instructor as well as help the instructor understand your expectations.\n\nOptional: You may answer as few or as many questions as you like.
\n\nIf you could describe your perfect instructor in three words how would you describe them? (30 character limit) </string>
    <string name="chk1_value">I would like my child to eventually move into competitive swimming/join a swim team.</string>
    <string name="chk2_value">I would like to focus more on speed and distance/endurance.</string>
    <string name="chk3_value">I would like to focus on technique and shorter distances.</string>
    <string name="txtbottominfo">Please list any swimming goals you would like to achieve or comments you would like to leave for your instructor. 70 character limit</string>
    <string name="progresreportlable">Use the chart below to track your swimmer\’s progress as they master skills and advance through the levels.</string>
    <string name="updateSuccess">Data updated successfully</string>
    <string name="suggest">We are extremely eager to hear your suggestions.\nPlease describe your suggestion </string>
    <string name="problem">We are extremely sorry that you faced a problem using our app. Please tell us what happened.\nDetailed Description </string>
    <string name="swimMeetsBefore">Have you ever been a timer before at one of our swim meets?</string>
    <string name="swimComptBefore">Have you ever been a timer before at a swim competition?</string>
    <string name="reminder"><u>REMINDERS:</u></string>
    <string name="confirmorder"><u>Please confirm your selections</u></string>
    <string name="createaccount_success">Dear Customer,\n\nThank you for registering with Waterworks Aquatics. You will be receiving an activation email shortly.</string>
    <string-array name="array_volunteers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="array_name">
        <item>Home</item>
        <item>Mom Cell</item>
        <item>Dad Cell</item>
        <item>Mom Work</item>
        <item>Dad Work</item>
        <item>Grand Parent</item>
        <item>Baby Sister</item>
        <item>Relative</item>
        <item>Fax</item>
        <item>Other</item>
    </string-array>
    <string-array name="menuoption">
        <item>Check In</item>
        <item>View Profile</item>
        <item>View My Schedule</item>
        <item>Make a Purchase</item>
        <item>Scheduling</item>
        <item>Kid\'s Corner</item>
        <item>Cancel a Lesson</item>
        <item>Contact Us</item>
        <item>Programs</item>
        <item>Logout</item>
    </string-array>
    <string-array name="menuoption1">
        <item>Home</item>
        
        <item>My Account</item>
        <item>View My Schedule</item>
        <item>Make a Purchase</item>
        <item>Scheduling</item>
        <item>Swim Competition</item>
        
        <item>Cancel a Lesson</item>
        <item>Programs</item>
        <item>Help &amp; Support</item>
        <item>Logout</item>
    </string-array>
    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>
    <string-array name="card_type">
        <item>Please select card type</item>
        <item>Visa</item>
        <item>American Express</item>
        <item>Master Card</item>
        <item>Discover</item>
    </string-array>
    <string-array name="acc_type">
        <item>Checking</item>
    </string-array>
    <string-array name="payment_type">
        <item>Please select account type</item>
        <item>Credit or Debit Card</item>
        <item>Bank Account</item>
    </string-array>
    <string name="vs_note1">If you are concerned about your child\'s progress at any time, please</string>
    <string name="clickhere">Click Here.</string>
    <string name="question_title">Please answer the questions below to help us determine your child\'s current swim level. This will help us match your child with the appropriate instructor and other student (if there is another student).</string>
    <string name="question_1"><b>Question #1</b>\n\nIs your child able to swim freestyle (the crawl), using big arms, to cross the length of a 25-yard pool, without touching the bottom or sides of the pool, and without assistance?</string>
    <string name="VAL_heading">Below are the primary skill requirements for a swimmer to progress to each level.\n\nAdditional skills are needed to advance.</string>
    <string name="VAL_level2">Swim 5 feet from the wall with their face in the water using flutter kicking.</string>
    <string name="VAL_level2_2">Comfortable back-float with assistance.</string>
    <string name="VAL_level3">Swim Freestyle with 2 unassisted 5 second long roll-over breaths.</string>
    <string name="VAL_level4">Swim half-way (12.5 yards) across the pool with roll-over breathing or side breaths.</string>
    <string name="VAL_level4_2">Jump into the pool and swim back to the wall.</string>
    <string name="VAL_level5">Swim Freestyle across the pool (25 yards) with roll-over breathing or side breaths.</string>
    <string name="VAL_level6">Swim Freestyle across the pool (25 yards) with less than 5 second breaths while the instructor is 10 feet in front of the student Level 7.</string>
    <string name="VAL_level7">Freestyle across the pool with the instructor behind the student.</string>
    <string name="VAL_level7_2">Backstroke across the pool (25 yards).</string>
    <string name="VAL_level8">Breaststroke half-way across the pool; competition “legal” kick is not required.</string>
    <string name="VAL_level9">Breaststroke across the pool (Competition “legal”).</string>
    <string name="VAL_level10">Butterfly across the pool (25 yards).</string>
    <string name="VAL_level10_2">Head-first dive from the side of the pool.</string>
    <string name="VAL_level11">Track start dive from the racing block.</string>
    <string name="VAL_level11_2">Open turns for Breaststroke and Butterfly.</string>
    <string name="VAL_level11_3">Swim 50 continuous yards of each of the 4 competitive strokes.</string>
    <string name="VAL_level12">Freestyle &amp; Backstroke flip-turns.</string>
    <string name="VAL_level12_2">Sprinting and speed work on all 4 competitive strokes.</string>
    <string name="VAL_level12_3">Technical improvements to form and efficiency on all 4 competitive strokes.</string>
</resources>